# rapid

./: .gitignore  LICENSE  LICENSE.md  README.md  RELEASE.md  index.html
.github/workflows/: RELEASE.yml  ci.yml  cmake-multi-platform.yml  release.yml
qt_web_editor/: CMakeLists.txt  README.md
qt_web_editor/cmake/: Info.plist.in  SetAppIcon.cmake
qt_web_editor/forms/: mainwindow.ui
qt_web_editor/src/: main.cpp
qt_web_editor/src/core/: application.cpp  application.h  editorwidget.cpp  editorwidget.h  filebrowser.cpp  filebrowser.h  mainwindow.cpp  mainwindow.h  settings.cpp  settings.h
qt_web_editor/src/utils/: syntaxhighlighter.cpp  syntaxhighlighter.h
scripts/: build.sh  build_mac.sh  build_wasm.sh  build_windows.ps1  package_linux.sh  package_mac.sh  package_win.ps1  package_windows.ps1
